--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,5 +19,105 @@
 .gpt3_navbar-links_logo h2 {
   width: 62.56px;
   height: 16.02px;
-  font-size: 20px;
+  font-size: 18px;
+  color: var(--color-new);
+  margin-right: 2rem;
+}
+
+.gpt3_navbar-links_logo h2 span {
+   background-color: #CA4246;
+    background-image: linear-gradient(
+         45deg,
+         #CA4246 16.666%, 
+         #E16541 16.666%, 
+         #E16541 33.333%, 
+         #F18F43 33.333%, 
+         #F18F43 50%, 
+         #8B9862 50%, 
+         #8B9862 66.666%, 
+         #476098 66.666%, 
+         #476098 83.333%, 
+         #A7489B 83.333%);
+   background-size: 100%;
+   background-repeat: repeat;
+   background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  animation: rainbow-text-simple-animation-rev 0.75s ease forwards;
+}
+
+@keyframes rainbow-text-simple-animation-rev {
+  0% {
+      background-size: 650%;
+  }
+  40% {
+      background-size: 650%;
+  }
+  100% {
+      background-size: 100%;
+  }
+}
+
+@keyframes rainbow-text-simple-animation {
+  0% {
+      background-size: 100%;
+  }
+  80% {
+      background-size: 650%;
+  }
+  100% {
+      background-size: 650%;
+  }
+}
+
+.gpt3_navbar-links_container ul {
+ display: flex;
+ flex-direction: row;
+ margin-left: 8rem;
+ width: 100%;
+}
+
+.gpt3_navbar-links_container ul li,
+.gpt3_navbar-sign p,
+.gpt3_navbar-menu_container p {
+  color: var(--color-new);
+  list-style: none;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 25px;
+  text-transform: capitalize;
+  margin: 0 1rem;
+  cursor: pointer;
+}
+
+.gpt3_navbar-links_container ul li a {
+  text-decoration: none;
+  color: var(--color-new);
+}
+
+.gpt3_navbar-links_container ul li a:hover {
+  text-decoration: underline;
+  color: var(--color-subtext);
+}
+
+.gpt3_navbar-sign {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.gpt3_navbar-sign button,
+.gpt3_navbar-menu_container button {
+  padding: 0.5rem 1rem;
+  color: var(--color-new);
+  background-color: #ff4b20;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  border-radius: 5px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
 }
