Adding the hamburger for mobile view

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 .gpt3_navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 2rem 6rem;
 }
@@ -22,6 +22,7 @@
   font-size: 18px;
   color: var(--color-new);
   margin-right: 2rem;
+  cursor: pointer;
 }
 
 .gpt3_navbar-links_logo h2 span {
@@ -107,17 +108,38 @@
   align-items: center;
 }
 
+.gpt3_navbar-sign {
+  margin-left: 22%;
+}
+
 .gpt3_navbar-sign button,
 .gpt3_navbar-menu_container button {
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
   color: var(--color-new);
   background-color: #ff4b20;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 15px;
-  line-height: 24px;
+  line-height: 20px;
   border-radius: 5px;
   border: 0;
   outline: none;
   cursor: pointer;
+}
+
+.gpt3_navbar-menu {
+  margin-left: 1rem;
+  display: none;
+  position: relative;
+}
+
+.gpt3_navbar-menu svg {
+  cursor: pointer;
+}
+
+.gpt3_navbar-menu_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
