Working with the header section

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,3 +1,30 @@
-body {
-  margin: 0;
+.gpt3_header {
+  display: flex;
+}
+
+.gpt3_header-content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-right: 5rem;
+}
+
+.gpt3_header-content h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
+}
+
+.gpt3_header-content p {
+  font-family: var(--font-family);
+  font-weight: normal;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 27px;
+  color: var(--color-text);
+  margin-top: 1.5rem;
 }
