--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -27,18 +27,7 @@
 
 .gpt3_navbar-links_logo h2 span {
    background-color: #CA4246;
-    background-image: linear-gradient(
-         45deg,
-         #CA4246 16.666%, 
-         #E16541 16.666%, 
-         #E16541 33.333%, 
-         #F18F43 33.333%, 
-         #F18F43 50%, 
-         #8B9862 50%, 
-         #8B9862 66.666%, 
-         #476098 66.666%, 
-         #476098 83.333%, 
-         #A7489B 83.333%);
+   background-image: linear-gradient(89.97deg, #ae67fa 1.84%, #ff4b20);
    background-size: 100%;
    background-repeat: repeat;
    background-clip: text;
