--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -14,7 +14,7 @@
 .gpt3_header-content h1 {
   font-family: var(--font-family);
   font-weight: 800;
-  font-size: 62px;
+  font-size: 58px;
   line-height: 75px;
   letter-spacing: -0.04em;
 }
@@ -27,4 +27,132 @@
   line-height: 27px;
   color: var(--color-text);
   margin-top: 1.5rem;
+}
+
+.gpt3_header-content_input {
+  width: 100%;
+  margin: 2rem 0 1rem;
+  display: flex;
+}
+
+.gpt3_header-content_input input {
+  flex: 2;
+  width: 100%;
+  min-height: 50px;
+  font-family: var(--font-family);
+  font-size: 20px;
+  line-height: 27px;
+  background: var(--color-footer);
+  border: 2px solid var(--color-footer);
+  padding: 0 1rem;
+  outline: none;
+  color: var(--color-new);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.gpt3_header-content_input button {
+  flex: 0.6;
+  width: 100%;
+  min-height: 50px;
+  font-family: var(--font-family);
+  font-weight: bold;
+  line-height: 27px;
+  background: #ff4820;
+  color: var(--color-new);
+  cursor: pointer;
+  outline: none;
+  padding: 0 1rem;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.gpt3_header-content_people {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.gpt3_header-content_people img {
+  width: 181.79px;
+  height: 38px;
+}
+
+.gpt3_header-content_people p {
+  margin: 0 0 0 1rem;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 38px;
+  color: var(--color-new);
+  text-align: center;
+}
+
+.gpt3_header-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gpt3_header-image img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+  .gpt3_header {
+    flex-direction: column;
+  }
+
+  .gpt3_header-content {
+    margin: 0 0 3rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .gpt3_header h1 {
+    font-size: 48px;
+    line-height: 60px;
+  }
+
+  .gpt3_header p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .gpt3_header-content_people {
+    flex-direction: column;
+  }
+
+  .gpt3_header-content_people p {
+    margin: 0;
+  }
+
+  .gpt3_header-content_input input,
+  .gpt3_header-content_input button {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .gpt3_header h1 {
+    font-size: 40px;
+    line-height: 48px;
+  }
+
+  .gpt3_header p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .gpt3_header-content_input input,
+  .gpt3_header-content_input button {
+    font-size: 10px;
+    line-height: 16px;
+  }
 }
