--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
 .gpt3_navbar-links {
   flex: 1;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -63,7 +63,7 @@
 .gpt3_navbar-links_container ul {
  display: flex;
  flex-direction: row;
- margin-left: 8rem;
+ margin-left: 1rem;
  width: 100%;
 }
 
@@ -95,7 +95,6 @@
 
 .gpt3_navbar-sign {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
