--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,5 +1,6 @@
 .gpt3_header {
   display: flex;
+  margin-top: 25px;
 }
 
 .gpt3_header-content {
@@ -14,7 +15,7 @@
 .gpt3_header-content h1 {
   font-family: var(--font-family);
   font-weight: 800;
-  font-size: 58px;
+  font-size: 55.7px;
   line-height: 75px;
   letter-spacing: -0.04em;
 }
