Add image for page branding

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@ body {
 
 .gradient_text {
   background: var(--gradient-text);
-  background-clip: text;
+
+  /* background-clip: text; */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -33,28 +34,31 @@ body {
 }
 
 .scale-up-center {
-	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 @-webkit-keyframes scale-up-center {
   0% {
     -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
   }
+
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
+
 @keyframes scale-up-center {
   0% {
     -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
   }
+
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
 }
 
@@ -62,7 +66,7 @@ body {
   .section_padding {
     padding: 4rem;
   }
-  
+
   .section_margin {
     margin: 4rem;
   }
@@ -72,7 +76,7 @@ body {
   .section_padding {
     padding: 4rem 2rem;
   }
-  
+
   .section_margin {
     margin: 4rem 2rem;
   }
