--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -1,3 +1,108 @@
-body {
+.gpt3_wahtgpt3 {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  background: var(--color-text);
+
+  /* background: -moz-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+  background: -webkit-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+  background: -o-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%);
+  background: -ms-radial-gradient(circle at 3% 25%, rgba(0, 40, 83, 1) 0%, rgba(4, 12, 24, 1) 100%); */
+  background:radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+}
+
+.gpt3_whatgpt3-feature {
+  display: flex;
+}
+
+.gpt3_whatgpt3-feature .gpt3_whatgpt3-container {
   margin: 0;
+}
+
+.gpt3_whatgpt3-feature .gpt3_whatgpt3-container-text {
+  max-width: 700px;
+}
+
+.gpt3_whatgpt3-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 4rem 0 2rem;
+}
+
+.gpt3_whatgpt3-header h1 {
+  font-family: var(--font-family);
+  font-size: 34px;
+  line-height: 45px;
+  font-weight: 800;
+  max-width: 510px;
+}
+
+.gpt3_whatgpt3-header p {
+  font-family: var(--font-family);
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 500;
+  color: var(--color-subtext);
+  cursor: pointer;
+}
+
+.gpt3_whatgpt3-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 2rem;
+}
+
+/* Customizing feature component as per needs */
+.gpt3_whatgpt3-container .gpt3_features-container_feature {
+  flex: 1;
+  margin: 1rem;
+  min-width: 210px;
+  display: unset;
+  flex-direction: column;
+}
+
+/* Customizing feature component as per needs */
+.gpt3_whatgpt3-container .gpt3_features-container_feature-text {
+  margin-top: 0.5rem;
+}
+
+@media screen and (max-width: 850px) {
+  .gpt3_whatgpt3-header {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: 0rem;
+  }
+
+  .gpt3_whatgpt3-header p {
+      margin-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  /* Customizing feature component as per needs */
+  .gpt3_whatgpt3-feature .gpt3_features-container_feature {
+      flex-direction: column;
+  }
+
+  /* Customizing feature component as per needs */
+  .gpt3_whatgpt3-feature .gpt3_features-container_feature-text {
+      margin-top: 0.5rem;
+  }
+
+  .gpt3_whatgpt3-header h1 {
+      font-size: 28px;
+      line-height: 40px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  /* Customizing feature component as per needs */
+  .gpt3_whatgpt3-container .gpt3_features-container_feature {
+      margin: 1rem 0;
+      min-width: 100%;
+  }
 }
