--- a/src/components/features/features.css
+++ b/src/components/features/features.css
@@ -1,3 +1,61 @@
-body {
-  margin: 0;
+.gpt3_features-container_feature {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
+  margin: row;
+}
+
+.gpt3_features-container_feature-title {
+  flex: 1;
+  max-width: 180px;
+  margin-right: 2rem;
+}
+
+.gpt3_features-container_feature-title h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -0.04rem;
+  color: var(--color-new);
+}
+
+.gpt3_features-container_feature-title div {
+  width: 38px;
+  height: 3px;
+  background: var(--gradient-bar);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 0.25rem;
+}
+
+.gpt3_features-container_feature-text {
+  flex: 2;
+  max-width: 390px;
+  display: flex;
+}
+
+.gpt3_features-container_feature-text p {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+  color: var(--color-text);
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3_features-container_feature-title h1 {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .gpt3_features-container_feature-text p {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .gpt3_features-container_feature {
+    margin: 1rem 0;
+  }
 }
