Modify feature for array props

--- a/src/containers/feature/feature.css
+++ b/src/containers/feature/feature.css
@@ -1,3 +1,16 @@
-body {
-  margin: 0;
+.gpt3_features {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.gpt3_features-header {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  text-align: left;
+  margin-right: 5rem;
 }
