--- a/src/containers/feature/feature.css
+++ b/src/containers/feature/feature.css
@@ -29,7 +29,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 30px;
-  color: #ff8471;
+  color: var(--color-subtext);
   margin-top: 2rem;
 }
 
