--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -1,3 +1,65 @@
-body {
-  margin: 0;
+.gpt3_possible {
+  display: flex;
+  flex-direction: row;
+}
+
+.gpt3_possible-image {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+  margin-right: 2rem;
+}
+
+.gpt3_possible-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.gpt3_possible-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-bottom: 3rem;
+}
+
+.gpt3_possible-content h4 {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 30px;
+  color: #71e5ff;
+}
+
+.gpt3_possible-content h4:last-child {
+  color: var(--color-subtext);
+}
+
+.gpt3_possible-content h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 34px;
+  line-height: 45px;
+  margin: 1rem 0;
+}
+
+.gpt3_possible-content p {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--color-text);
+  margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 950px) {
+  .gpt3_possible {
+    flex-direction: column;
+  }
+
+  .gpt3_possible-image {
+    margin: 1rem 0;
+  }
 }
