--- a/src/components/cta-call/cta.css
+++ b/src/components/cta-call/cta.css
@@ -1,3 +1,10 @@
-body {
-  margin: 0;
+.gpt3_cta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 2rem;
+  margin: 4rem;
+  border-radius: 1rem;
+  background: var(--gradient-bar);
 }
