--- a/src/components/cta-call/cta.css
+++ b/src/components/cta-call/cta.css
@@ -46,3 +46,30 @@
   cursor: pointer;
   min-width: 150px;
 }
+
+@media screen and (max-width: 650px) {
+  .gpt3_cta {
+    flex-direction: column;
+  }
+
+  .gpt3_cta-btn {
+    margin: 2rem 0 0;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3_cta {
+    margin: 1rem 2rem;
+  }
+
+  .gpt3_cta-content h3 {
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  .gpt3_cta-btn button {
+    font-size: 14px;
+    line-height: 28px;
+  }
+}
+
