--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -1,3 +1,18 @@
-body {
-  margin: 0;
+.gpt3_blog-container_article {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: var(--color-footer);
+}
+
+.gpt3_blog-container_article-image {
+  width: 100%;
+  height: 100%;
+  background: var(--color-footer);
+}
+
+.gpt3_blog-container_article-image img {
+  width: 100%;
+  height: 100%;
 }
