--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,3 +1,35 @@
-body {
-  margin: 0;
+.gpt3_blog {
+  display: flex;
+  flex-direction: column;
+}
+
+.gpt3_blog-header {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 5rem;
+}
+
+.gpt3_blog-header h1 {
+  font-family: var(--font-family);
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 75px;
+  letter-spacing: -0.04em;
+}
+
+.gpt3_blog-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.gpt3_blog-container_groupA {
+  flex: 0.75;
+  margin-right: 2rem;
+}
+
+.gpt3_blog-container_groupB {
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
 }
