--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -33,3 +33,27 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
 }
+
+@media screen and (max-width: 990px) {
+  .gpt3_blog-container {
+    flex-direction: column-reverse;
+  }
+
+  .gpt3_blog-container_groupA {
+    margin: 2rem 0;
+  }
+
+  .gpt3_blog-container_groupA .gpt3_blog-container_article {
+    width: 48%;
+  }
+
+  .gpt3_blog-container_groupA .gpt3_blog-container-image {
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gpt3_blog-container_groupB {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
